--- a/index.html
+++ b/index.html
@@ -141,16 +141,7 @@
                 <p class="desc">Say hello!</p>
                 <hr class="primary">
 
-                <div class="col-md-8 col-md-offset-2">
-                    <form class="contact-form" method="get" novalidate>
-                        <input name="name" type="text" placeholder="Name" id="name-field"><br>
-                        <input name="email" type="email" placeholder="Email" id="email-field"><br>
-                        <input name="phone" type="phone" placeholder="Phone number (optional)" id="phone-field"><br>                    
-                        <textarea name="message" placeholder="Message" id="message-field"></textarea><br>
-                        <p id="success-message">Message sent!</p>
-                        <button type="submit">Send</button>
-                    </form>
-                </div>
+                <p>The easiest way to reach me is to send an email to<br><br>info[at]axelniklasson.se<br><br>or call me at <br><br>+46 72 - 510 12 34</p>
 
             </div>
         </section>
