Added all code from other repo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <ul class="nav navbar-nav">
                         
                         <li class="menuItem"><a href="#about">About me</a></li>
-                        <li class="menuItem"><a href="#skills">Skills</a></li>
+                        <li class="menuItem"><a href="#latest">Latest</a></li>
                         <li class="menuItem"><a href="#experience">Experience</a></li>
                         <li class="menuItem"><a href="#contact">Contact</a></li>
                     </ul>
@@ -68,21 +68,27 @@
         </section>
 
         <hr class="divider">
-
-        <section id="skills">
+        
+        <section id="latest">
             <div class="container text-center">
-                <h1>Skills</h1>
-                <p class="desc">What am I good at?</p>
+                <h1>Latest</h1>
+                <p class="desc">What I have been up to lately</p>
                 <hr class="primary">
 
                 <div class="row text-center">
-                    <div class="col-md-6 text-center">
-                        <h3>Web development</h3>
-                        <canvas class="chart" id="webSkillsChart" width="400" height="400"></canvas>
+                    <div class="col-md-6 col-md-offset-3">
+                        <h4>Finished my B.Sc. thesis</h4>
+                        <p class="desc">May, 2016</p>
+                        <p>I wrote my B.Sc. together with two other students regarding HMI design in automated vehicles and we are now finished! Next up is Netherlands, where we will be part of a huge team representing Chalmers in a competition for automated vehicles, known as <a href="http://www.gcdc.net/en/" target="_blank">GCDC</a>.</p>
+                        <p>Our thesis can be found <a href="dist/bsc_thesis.pdf" target="_blank">here</a>.</p>
                     </div>
-                    <div class="col-md-6 text-center">
-                        <h3>System development</h3>
-                        <canvas class="chart" id="devSkillsChart" width="400" height="400"></canvas>
+                </div>
+
+                <div class="row text-center">
+                    <div class="col-md-6 col-md-offset-3">
+                        <h4>Started working in Skåne</h4>
+                        <p class="desc">March, 2016</p>
+                        <p>Started working at <a href="http://xlent.se" target="_blank">XLENT</a> in Kristianstad, Sweden. At the moment I am involved in an exciting project, working from Gothenburg as I finish my B.Sc. Great place to work with awesome colleagues - excited to move there in June and start working full-time!</p>
                     </div>
                 </div>
             </div>
@@ -99,15 +105,15 @@
                 <div class="row text-center">
                     <div class="col-md-6 col-md-offset-3">
                         <h4>Consultant</h4>
-                        <p class="desc">XLENT, 2016 -</p>
-                        <p>To be filled in..</p>
+                        <p class="desc"><a href="http://www.xlent.se/" target="_blank">XLENT</a><br>2016 -</p>
+                        <p>Building mobile applications in <a href="http://phonegap.com/" target="_blank">Phonegap</a> and <a href="https://angularjs.org/" target="_blank">Angular</a>, all the way from "Hello world!" to release in the app stores.</p>
                     </div>
                 </div>
 
                 <div class="row text-center">
                     <div class="col-md-6 col-md-offset-3">
                         <h4>Self-employed software consultant</h4>
-                        <p class="desc">AxnIT Konsult, 2014 - 2016</p>
+                        <p class="desc">AxnIT Konsult<br>2014 - 2016</p>
                         <p>Founded my own consultancy firm, where I mainly worked
                         with web development, but also with design and app development.</p>
                     </div>
@@ -116,18 +122,17 @@
                 <div class="row text-center">
                     <div class="col-md-6 col-md-offset-3">
                         <h4>Software developer</h4>
-                        <p class="desc">ArcCore AB, 2014 - 2016</p>
+                        <p class="desc"><a href="http://www.arccore.com/" target="_blank">ArcCore</a><br>2014 - 2016</p>
                         <p>Mainly worked with designing and implementing a backend 
-                        for a customer management system, written in Python/Django.</p>
+                        for a customer management system, written in <a href="https://www.djangoproject.com/" target="_blank">Django</a>.</p>
                     </div>
                 </div>
 
                 <div class="row text-center">
                     <div class="col-md-6 col-md-offset-3">
                         <h4>Software engineering student</h4>
-                        <p class="desc">Chalmers University of Technology, 2013 -</p>
-                        <p>Studying to become a software engineer and currently writing
-                        my Bachelor's Thesis.</p>
+                        <p class="desc"><a href="http://www.chalmers.se/en/Pages/default.aspx" target="_blank">Chalmers University of Technology</a><br>2013 - 2016</p>
+                        <p>Studying to become a software engineer. At the moment finishing my B.Sc. before I will take a year off for work and backpacking. I will then come back and finish my M.Sc.</p>
                     </div>
                 </div>
             </div>
