--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <h4>Finished my B.Sc. thesis</h4>
                         <p class="desc">May, 2016</p>
                         <p>I wrote my B.Sc. together with two other students regarding HMI design in automated vehicles and we are now finished! Next up is Netherlands, where we will be part of a huge team representing Chalmers in a competition for automated vehicles, known as <a href="http://www.gcdc.net/en/" target="_blank">GCDC</a>.</p>
-                        <p>Our thesis can be found <a href="dist/bsc_thesis.pdf" target="_blank">here</a>.</p>
+                        <!-- <p>Our thesis can be found <a href="dist/thesis.pdf">here</a>.</p> -->
                     </div>
                 </div>
 
