Added latest section related to GCDC

--- a/index.html
+++ b/index.html
@@ -77,10 +77,21 @@
 
                 <div class="row text-center">
                     <div class="col-md-6 col-md-offset-3">
+                        <h4>Competed in <a href="http://www.gcdc.net/en/" target="_blank">GCDC</a> with Chalmers</h4>
+                        <p class="desc">End of May, 2016</p>
+                        <p>Our B.Sc. group went to Helmond, just outside the Netherlands for about a week where we installed our HMI in Chalmers' car and participated in the competition. We were part of a team with a bunch of great people and had loads of fun. Our team finished in fourth place of ten cars, but our HMI was named as one of the best, so overall a great experience.</p>
+                        <p>Our very own producer, David Bergström, made a video documenting our trip to the Netherlands, which can be watched below.</p><br>
+                        <iframe id="hmi" width="560" height="315" src="https://www.youtube.com/embed/xMh_tibU0Lk" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+
+                <div class="row text-center">
+                    <div class="col-md-6 col-md-offset-3">
                         <h4>Finished my B.Sc. thesis</h4>
                         <p class="desc">May, 2016</p>
                         <p>I wrote my B.Sc. together with two other students regarding HMI design in automated vehicles and we are now finished! Next up is Netherlands, where we will be part of a huge team representing Chalmers in a competition for automated vehicles, known as <a href="http://www.gcdc.net/en/" target="_blank">GCDC</a>.</p>
-                        <!-- <p>Our thesis can be found <a href="dist/thesis.pdf">here</a>.</p> -->
+                        <p>Our thesis can be found <a href="dist/thesis.pdf">here</a>.</p>
+
                     </div>
                 </div>
 
