--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                 <h1>Contact</h1>
                 <p class="desc">Say hello!</p>
                 <hr class="primary">
-
-                <div class="col-md-8 col-md-offset-2">
+                <p>You can reach me at 072 - 510 12 34 or at <a href="mailto:info@axelniklasson.se">info@axelniklasson.se</a>.</p>
+<!--                 <div class="col-md-8 col-md-offset-2">
                     <form class="contact-form" method="get" novalidate>
                         <input name="name" type="text" placeholder="Name" id="name-field"><br>
                         <input name="email" type="email" placeholder="Email" id="email-field"><br>
@@ -166,7 +166,7 @@
                         <p id="success-message">Message sent!</p>
                         <button type="submit">Send</button>
                     </form>
-                </div>
+                </div> -->
 
             </div>
         </section>
