move your body every every body

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div id="splash">
             <div id="splashTextWrapper">
-                <span id="name">Axel Niklasson [deployed]</span><br>
+                <span id="name">Axel Niklasson [webhook deployed]</span><br>
                 <span id="desc">B.Sc. student at <strong>Chalmers</strong> and
                 consultant at <strong>XLENT</strong></span><br>
                 <a class="btn btn-primary" href="#about">Read more</a>
