Fixed some typos

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <div id="splash">
             <div id="splashTextWrapper">
                 <span id="name">Axel Niklasson</span><br>
-                <span id="desc">B.Sc. student at <strong>Chalmers</strong> and
-                consultant at <strong>XLENT</strong></span><br>
+                <span id="desc">Consultant at <strong>XLENT</strong></span><br>
                 <a class="btn btn-primary" href="#about">Read more</a>
             </div>
         </div>
@@ -56,11 +55,9 @@
                 <div class="col-md-8 text-center">
                     <h3>Hello!</h3>
                     <p>My name is Axel Niklasson and I am 21 years old. I am currently
-                    writing my Bachelor's Thesis regarding HMI design in autonomous vehicles
-                    at Chalmers University of Technology.</p>
-                    <p>I also work as a consultant at XLENT in Kristianstad, Sweden, where
-                    I plan to move in a couple of months.</p>
-                    <p>I have also made my resume available here;</p>
+                    working as a consultant at <a href="http://xlent.se" target="_blank">XLENT</a>, where I mainly focus on web development.</p>
+                    <p>I recently moved to Skåne after finishing my Bachelor's Thesis at Chalmers University of Tecknology and I am currently taking a gap year for work and backpacking in Southeast Asia.</p>
+                    <p>I have also made my resume accessible from below; </p>
                     <a class="resume" href="dist/CV_en.pdf">English</a><span class="resume"> / </span><a class="resume" href="dist/CV.pdf">Swedish</a>
                 </div>
             </div>
@@ -79,7 +76,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h4>Participated in <a href="http://www.gcdc.net/en/" target="_blank">GCDC</a> in the Netherlands</h4>
                         <p class="desc">End of May, 2016</p>
-                        <p>Our B.Sc. group went to Helmond, just outside the Netherlands for about a week where we installed our HMI in Chalmers' car and participated in the competition. We were part of a team with a bunch of great people and had loads of fun. Our team finished in fourth place of ten cars, but our HMI was named as one of the best, so overall a great experience.</p>
+                        <p>Our B.Sc. group went to Helmond, just outside Eindhoven, for about a week where we installed our HMI in Chalmers' car and participated in the competition. We were part of a team with a bunch of great people and had loads of fun. Our team finished in fourth place of ten cars, but our HMI was named as one of the best, so overall a great experience.</p>
                         <p>Our very own producer, David Bergström, made a video documenting our trip to the Netherlands, which can be watched below.</p><br>
                         <iframe id="hmi" width="560" height="315" src="https://www.youtube.com/embed/xMh_tibU0Lk" frameborder="0" allowfullscreen></iframe>
                     </div>
