--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p>My name is Axel Niklasson and I am 21 years old. I am currently
                     working as a consultant at <a href="http://xlent.se" target="_blank">XLENT</a>, where I mainly focus on web development.</p>
                     <p>I recently moved to Skåne after finishing my Bachelor's Thesis at Chalmers University of Tecknology and I am currently taking a gap year for work and backpacking in Southeast Asia.</p>
-                    <p>I have also made my resume accessible from below; </p>
+                    <p>To find out more about me, my resume can be accessed from below; </p>
                     <a class="resume" href="dist/CV_en.pdf">English</a><span class="resume"> / </span><a class="resume" href="dist/CV.pdf">Swedish</a>
                 </div>
             </div>
@@ -71,6 +71,15 @@
                 <h1>Latest</h1>
                 <p class="desc">What I have been up to lately</p>
                 <hr class="primary">
+
+                <div class="row text-center">
+                    <div class="col-md-6 col-md-offset-3">
+                        <h4>Started developing my own blog tool</h4>
+                        <p class="desc">June, 2016</p>
+                        <p>Since I was unable to find a blog tool that suited me, I started designing and implementing my own. The tool is called <a href="http://github.com/axelniklasson/writer.git" target="_blank">Writer</a> and I have actually made progress really fast. At the moment, creating and managing posts along with categories are working as intended along with authentication and some other good stuff.</p>
+                        <p>You can check it out in action <a href="https://resa.axelniklasson.se" target="_blank">here</a>!</p>
+                    </div>
+                </div>
 
                 <div class="row text-center">
                     <div class="col-md-6 col-md-offset-3">
@@ -114,7 +123,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h4>Consultant</h4>
                         <p class="desc"><a href="http://www.xlent.se/" target="_blank">XLENT</a><br>2016 -</p>
-                        <p>Building mobile applications in <a href="http://phonegap.com/" target="_blank">Phonegap</a> and <a href="https://angularjs.org/" target="_blank">Angular</a>, all the way from "Hello world!" to release in the app stores.</p>
+                        <p>Building mobile applications in <a href="http://phonegap.com/" target="_blank">Phonegap</a> and <a href="https://angularjs.org/" target="_blank">Angular</a>, all the way from "Hello world!" to release in the app stores. Also working with web development, where <a href="https://angularjs.org/" target="_blank">Angular</a> and <a href="http://knockoutjs.com/" target="_blank">Knockout</a> receive most of my current focus.</p>
                     </div>
                 </div>
 
@@ -140,7 +149,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h4>Software engineering student</h4>
                         <p class="desc"><a href="http://www.chalmers.se/en/Pages/default.aspx" target="_blank">Chalmers University of Technology</a><br>2013 - 2016</p>
-                        <p>Studying to become a software engineer. At the moment finishing my B.Sc. before I will take a year off for work and backpacking. I will then come back and finish my M.Sc.</p>
+                        <p>Studying to become a software engineer. Just finished my B.Sc. and am currently taking a gap year for work and backpacking.</p>
                     </div>
                 </div>
             </div>
