Added skill boxes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <ul class="nav navbar-nav">
                         
                         <li class="menuItem"><a href="#about">About me</a></li>
+                        <li class="menuItem"><a href="#skillset">Skillset</a></li>
                         <li class="menuItem"><a href="#latest">Latest</a></li>
                         <li class="menuItem"><a href="#experience">Experience</a></li>
                         <li class="menuItem"><a href="#contact">Contact</a></li>
@@ -38,7 +39,7 @@
         <div id="splash">
             <div id="splashTextWrapper">
                 <span id="name">Axel Niklasson</span><br>
-                <span id="desc">Consultant at <strong>XLENT</strong></span><br>
+                <span id="desc">Software developer working as a<br>consultant at <strong>XLENT</strong></span><br>
                 <a class="btn btn-primary" href="#about">Read more</a>
             </div>
         </div>
@@ -65,6 +66,47 @@
         </section>
 
         <hr class="divider">
+
+        <section id="skillset">
+        <div class="container text-center">
+            <h1>Skillset</h1>
+            <p class="desc">What can I do?</p>
+            <hr class="primary">
+            <div class="row text-center">
+                <div class="col-md-10 col-md-offset-1">
+                    <p>By combining studies along with part-time work during weekends and summers, I have managed to work with many different techniques and platforms. I tend to focus on web development, but I have also worked with native/hybrid mobile applications and backend .NET development. Lastly, I have also worked with deployment strategies and server management.</p>
+                    <p>My skills can (roughly) be summarized into the following areas;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 skill-wrapper">
+                    <div class="skill">
+                        <span>Front-end</span>
+                    </div>
+                </div>
+
+                <div class="col-md-3 skill-wrapper">
+                    <div class="skill">
+                        <span>Back-end</span>
+                    </div>
+                </div>
+
+                <div class="col-md-3 skill-wrapper">
+                    <div class="skill">
+                        <span>Deployment</span>
+                    </div>
+                </div>
+
+                <div class="col-md-3 skill-wrapper">
+                    <div class="skill">
+                        <span>Mobile apps</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
+
+        <hr class="divider">
         
         <section id="latest">
             <div class="container text-center">
@@ -73,7 +115,7 @@
                 <hr class="primary">
 
                 <div class="row text-center">
-                    <div class="col-md-6 col-md-offset-3">
+                    <div class="col-md-8 col-md-offset-2">
                         <h4>Started developing my own blog tool</h4>
                         <p class="desc">June, 2016</p>
                         <p>Since I was unable to find a blog tool that suited me, I started designing and implementing my own. The tool is called <a href="http://github.com/axelniklasson/writer.git" target="_blank">Writer</a> and I have actually made progress really fast. At the moment, creating and managing posts along with categories are working as intended along with authentication and some other good stuff.</p>
@@ -82,7 +124,7 @@
                 </div>
 
                 <div class="row text-center">
-                    <div class="col-md-6 col-md-offset-3">
+                    <div class="col-md-8 col-md-offset-2">
                         <h4>Participated in <a href="http://www.gcdc.net/en/" target="_blank">GCDC</a> in the Netherlands</h4>
                         <p class="desc">End of May, 2016</p>
                         <p>Our B.Sc. group went to Helmond, just outside Eindhoven, for about a week where we installed our HMI in Chalmers' car and participated in the competition. We were part of a team with a bunch of great people and had loads of fun. Our team finished in fourth place of ten cars, but our HMI was named as one of the best, so overall a great experience.</p>
@@ -92,7 +134,7 @@
                 </div>
 
                 <div class="row text-center">
-                    <div class="col-md-6 col-md-offset-3">
+                    <div class="col-md-8 col-md-offset-2">
                         <h4>Finished my B.Sc. thesis</h4>
                         <p class="desc">May, 2016</p>
                         <p>I wrote my B.Sc. together with two other students regarding HMI design in automated vehicles and we are now finished! Next up is Netherlands, where we will be part of a huge team representing Chalmers in a competition for automated vehicles, known as <a href="http://www.gcdc.net/en/" target="_blank">GCDC</a>.</p>
@@ -102,7 +144,7 @@
                 </div>
 
                 <div class="row text-center">
-                    <div class="col-md-6 col-md-offset-3">
+                    <div class="col-md-8 col-md-offset-2">
                         <h4>Started working in Skåne</h4>
                         <p class="desc">March, 2016</p>
                         <p>Started working at <a href="http://xlent.se" target="_blank">XLENT</a> in Kristianstad, Sweden. At the moment I am involved in an exciting project, working from Gothenburg as I finish my B.Sc. Great place to work with awesome colleagues - excited to move there in June and start working full-time!</p>
@@ -120,7 +162,7 @@
                 <hr class="primary">
 
                 <div class="row text-center">
-                    <div class="col-md-6 col-md-offset-3">
+                    <div class="col-md-8 col-md-offset-2">
                         <h4>Consultant</h4>
                         <p class="desc"><a href="http://www.xlent.se/" target="_blank">XLENT</a><br>2016 -</p>
                         <p>Building mobile applications in <a href="http://phonegap.com/" target="_blank">Phonegap</a> and <a href="https://angularjs.org/" target="_blank">Angular</a>, all the way from "Hello world!" to release in the app stores. Also working with web development, where <a href="https://angularjs.org/" target="_blank">Angular</a> and <a href="http://knockoutjs.com/" target="_blank">Knockout</a> receive most of my current focus.</p>
@@ -128,7 +170,7 @@
                 </div>
 
                 <div class="row text-center">
-                    <div class="col-md-6 col-md-offset-3">
+                    <div class="col-md-8 col-md-offset-2">
                         <h4>Self-employed software consultant</h4>
                         <p class="desc">AxnIT Konsult<br>2014 - 2016</p>
                         <p>Founded my own consultancy firm, where I mainly worked
@@ -137,7 +179,7 @@
                 </div>
 
                 <div class="row text-center">
-                    <div class="col-md-6 col-md-offset-3">
+                    <div class="col-md-8 col-md-offset-2">
                         <h4>Software developer</h4>
                         <p class="desc"><a href="http://www.arccore.com/" target="_blank">ArcCore</a><br>2014 - 2016</p>
                         <p>Mainly worked with designing and implementing a backend 
@@ -146,7 +188,7 @@
                 </div>
 
                 <div class="row text-center">
-                    <div class="col-md-6 col-md-offset-3">
+                    <div class="col-md-8 col-md-offset-2">
                         <h4>Software engineering student</h4>
                         <p class="desc"><a href="http://www.chalmers.se/en/Pages/default.aspx" target="_blank">Chalmers University of Technology</a><br>2013 - 2016</p>
                         <p>Studying to become a software engineer. Just finished my B.Sc. and am currently taking a gap year for work and backpacking.</p>
@@ -162,7 +204,11 @@
                 <h1>Contact</h1>
                 <p class="desc">Say hello!</p>
                 <hr class="primary">
-                <p>You can reach me at 072 - 510 12 34 or at <a href="mailto:info@axelniklasson.se">info@axelniklasson.se</a>.</p>
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <p>You can reach me at 072 - 510 12 34 or at <a href="mailto:info@axelniklasson.se">info@axelniklasson.se</a>.</p>
+                    </div>
+                </div>
 <!--                 <div class="col-md-8 col-md-offset-2">
                     <form class="contact-form" method="get" novalidate>
                         <input name="name" type="text" placeholder="Name" id="name-field"><br>
