Updated content and added meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Axel Niklasson</title>
+        <meta name="description" content="Personal website for software developer Axel Niklasson.">
+        <meta name="keywords" content="Axel, Niklasson, AxelNiklasson, Software, Developer, Chalmers">
+        <meta name="author" content="Axel Niklasson">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -39,7 +42,8 @@
         <div id="splash">
             <div id="splashTextWrapper">
                 <span id="name">Axel Niklasson</span><br>
-                <span id="desc">Software developer working as a<br>consultant at <strong>XLENT</strong></span><br>
+                <span id="desc">B.Sc. in Software Engineering</span><br><br>
+                <span id="desc">Currently working as a<br>consultant at <strong>XLENT</strong></span><br>
                 <a class="btn btn-primary" href="#about">Read more</a>
             </div>
         </div>
@@ -116,10 +120,19 @@
 
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2">
+                        <h4>Getting my PADI Open Water certificate</h4>
+                        <p class="desc">July, 2016</p>
+                        <p>Me and my family are currently studying to receive PADI Open Water certificates, enabling us to go diving when on vacations and so on. I am very excited regarding this, as I plan to go diving quite a few times when me and Martin are out backpacking in Southeast Asia.</p>
+                        <p>I am also working on a website related to our trip, which can be found at <a href="https://resa.axelniklasson.se" target="_blank">resa.axelniklasson.se</a>!</p>
+                    </div>
+                </div>
+
+                <div class="row text-center">
+                    <div class="col-md-8 col-md-offset-2">
                         <h4>Started developing my own blog tool</h4>
                         <p class="desc">June, 2016</p>
-                        <p>Since I was unable to find a blog tool that suited me, I started designing and implementing my own. The tool is called <a href="http://github.com/axelniklasson/writer.git" target="_blank">Writer</a> and I have actually made progress really fast. At the moment, creating and managing posts along with categories are working as intended along with authentication and some other good stuff.</p>
-                        <p>You can check it out in action <a href="https://resa.axelniklasson.se" target="_blank">here</a>!</p>
+                        <p>Since I was unable to find a blog tool that suited me, I started designing and implementing my own. The tool is called <a href="http://github.com/axelniklasson/WriterCMS.git" target="_blank">WriterCMS</a> and I have actually made progress really fast. At the moment, creating and managing posts along with categories are working as intended along with authentication and some other good stuff.</p>
+                        <p>You can check it out in action <a href="https://resa.axelniklasson.se" target="_blank">here</a>! (Swedish content)</p>
                     </div>
                 </div>
 
@@ -142,14 +155,6 @@
 
                     </div>
                 </div>
-
-                <div class="row text-center">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h4>Started working in Skåne</h4>
-                        <p class="desc">March, 2016</p>
-                        <p>Started working at <a href="http://xlent.se" target="_blank">XLENT</a> in Kristianstad, Sweden. At the moment I am involved in an exciting project, working from Gothenburg as I finish my B.Sc. Great place to work with awesome colleagues - excited to move there in June and start working full-time!</p>
-                    </div>
-                </div>
             </div>
         </section>
 
@@ -165,7 +170,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h4>Consultant</h4>
                         <p class="desc"><a href="http://www.xlent.se/" target="_blank">XLENT</a><br>2016 -</p>
-                        <p>Building mobile applications in <a href="http://phonegap.com/" target="_blank">Phonegap</a> and <a href="https://angularjs.org/" target="_blank">Angular</a>, all the way from "Hello world!" to release in the app stores. Also working with web development, where <a href="https://angularjs.org/" target="_blank">Angular</a> and <a href="http://knockoutjs.com/" target="_blank">Knockout</a> receive most of my current focus.</p>
+                        <p>Building mobile applications in <a href="http://phonegap.com/" target="_blank">Phonegap</a> and <a href="https://angularjs.org/" target="_blank">Angular</a>, all the way from "Hello world!" to release in the app stores. Also working with web development, where <a href="https://angularjs.org/" target="_blank">Angular</a> and <a href="http://knockoutjs.com/" target="_blank">Knockout</a> receive most of my current focus. I am also involved in an exciting project, where we're building a brand new web platform for a client based on <a href="http://wordpress.com" target="_blank">Wordpress</a>.</p>
                     </div>
                 </div>
 
