Updated profile pic

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <hr class="primary">
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <img class="img-responsive img-circle center" width="80%" src="dist/profile.png">
+                    <img class="img-responsive img-circle center" width="80%" src="dist/profile.jpg">
                 </div>
                 <div class="col-md-8 text-center">
                     <h3>Hello!</h3>
