--- a/index.html
+++ b/index.html
@@ -210,16 +210,16 @@
                 <p class="desc">Say hello!</p>
                 <hr class="primary">
                 <div class="col-md-8 col-md-offset-2">
-                    <form class="contact-form" method="get" novalidate>
+                    <!-- <form class="contact-form" method="get" novalidate>
                         <input name="name" type="text" placeholder="Name" id="name-field"><br>
                         <input name="email" type="email" placeholder="Email" id="email-field"><br>
                         <input name="phone" type="phone" placeholder="Phone number (optional)" id="phone-field"><br>
                         <textarea name="message" placeholder="Message" id="message-field"></textarea><br>
                         <p id="success-message">Message sent!</p>
                         <button type="submit">Send</button>
-                    </form>
+                    </form> -->
+                    <p>Don't hesitate to send me an email at hello@axelniklasson.se and I will get back to you as soon as possible.</p>
                 </div>
-
             </div>
         </section>
 
