--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <p>I recently moved to Skåne after finishing my Bachelor's Thesis at Chalmers University of Tecknology and I am currently taking a gap year for work and backpacking in Southeast Asia.</p>
                     <p>To find out more about me, my resume can be accessed from below; </p>
                     <a class="resume" href="dist/CV_en.pdf">English</a><span class="resume"> / </span><a class="resume" href="dist/CV.pdf">Swedish</a>
+                    <br><br><p>My B.Sc. thesis can be found <a href="dist/thesis.pdf">here</a>.</p>
                 </div>
             </div>
         </div>
@@ -120,6 +121,16 @@
 
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2">
+                        <h4>Working, diving and playing with a new GoPro</h4>
+                        <p class="desc">September, 2016</p>
+                        <p>As mentioned, working and diving pretty much sums up my life right about now. I also bought a GoPro Hero 4 Silver, which is an incredibly entertaining toy.</p>
+                        <p>Me buying a GoPro has resulted in a short video, covering our latest dive at Limhamn, which can be watched below.</p><br>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/N7ey2bxD5-w" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+
+                <div class="row text-center">
+                    <div class="col-md-8 col-md-offset-2">
                         <h4>Getting my PADI Open Water certificate</h4>
                         <p class="desc">July, 2016</p>
                         <p>Me and my family are currently studying to receive PADI Open Water certificates, enabling us to go diving when on vacations and so on. I am very excited regarding this, as I plan to go diving quite a few times when me and Martin are out backpacking in Southeast Asia.</p>
@@ -143,16 +154,6 @@
                         <p>Our B.Sc. group went to Helmond, just outside Eindhoven, for about a week where we installed our HMI in Chalmers' car and participated in the competition. We were part of a team with a bunch of great people and had loads of fun. Our team finished in fourth place of ten cars, but our HMI was named as one of the best, so overall a great experience.</p>
                         <p>Our very own producer, David Bergström, made a video documenting our trip to the Netherlands, which can be watched below.</p><br>
                         <iframe id="hmi" width="560" height="315" src="https://www.youtube.com/embed/xMh_tibU0Lk" frameborder="0" allowfullscreen></iframe>
-                    </div>
-                </div>
-
-                <div class="row text-center">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h4>Finished my B.Sc. thesis</h4>
-                        <p class="desc">May, 2016</p>
-                        <p>I wrote my B.Sc. together with two other students regarding HMI design in automated vehicles and we are now finished! Next up is Netherlands, where we will be part of a huge team representing Chalmers in a competition for automated vehicles, known as <a href="http://www.gcdc.net/en/" target="_blank">GCDC</a>.</p>
-                        <p>Our thesis can be found <a href="dist/thesis.pdf">here</a>.</p>
-
                     </div>
                 </div>
             </div>
