--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <p class="desc">End of May, 2016</p>
                         <p>Our B.Sc. group went to Helmond, just outside Eindhoven, for about a week where we installed our HMI in Chalmers' car and participated in the competition. We were part of a team with a bunch of great people and had loads of fun. Our team finished in fourth place of ten cars, but our HMI was named as one of the best, so overall a great experience.</p>
                         <p>Our very own producer, David Bergström, made a video documenting our trip to the Netherlands, which can be watched below.</p><br>
-                        <iframe id="hmi" width="560" height="315" src="https://www.youtube.com/embed/xMh_tibU0Lk" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/xMh_tibU0Lk" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
